# MuonVeto

./: CMakeLists.txt  Makefile  MuonVeto.cc  README.md
analysis/: analysis.ipynb  response_analysis.ipynb
config/: bcf92_abs.csv  bcf92_emi.csv  bending.json  sp101_scint.csv  straight.json  uturn.json
data/: gamma_z.csv  gamma_z_SiPM_0.csv  gamma_z_SiPM_1.csv  muon_energy.csv  muon_x.csv  muon_x_SiPM_0.csv  muon_x_SiPM_1.csv  muon_z.csv  muon_z_SiPM_0.csv  muon_z_SiPM_1.csv
data/probe/: probe_analysis.ipynb
data/probe/run0/: RunConditions.json
data/probe/run1/: RunConditions.json
include/: MVActionInitializer.hh  MVDefaultGenerator.hh  MVDetectorConstruction.hh  MVDetectorMessenger.hh  MVEventAction.hh  MVEventInformation.hh  MVGammaGenerator.hh  MVGenerator.hh  MVGlobals.hh  MVMuonGenerator.hh  MVPrimaryGeneratorAction.hh  MVRunAction.hh  MVRunMT.hh  MVSpecialModes.hh  MVSteppingAction.hh  MVTrackingAction.hh  SiPMHit.hh  SiPMPhotonAccumulator.hh  SiPMSD.hh
macro/: gamma_z.mac  gui.mac  init_vis.mac  muon_energy.mac  muon_x.mac  muon_z.mac  run1.mac  vis.mac
probe/: gen_makefile.py
scripts/: get_probe.py  probe_makefile.py  random_makefile.py
src/: MVActionInitializer.cc  MVDectectorConstruction.cc  MVDefaultGenerator.cc  MVDetectorConstruction.cc  MVDetectorMessenger.cc  MVEventAction.cc  MVEventInformation.cc  MVGammaGenerator.cc  MVGlobals.cc  MVMuonGenerator.cc  MVPrimaryGeneratorAction.cc  MVRunAction.cc  MVRunMT.cc  MVSpecialModes.cc  MVSteppingAction.cc  MVTrackingAction.cc  SiPMHit.cc  SiPMPhotonAccumulator.cc  SiPMSD.cc
(+2879 files in other folders)
